Correct inline rolls clipping in reference tab

--- a/src/styles/newrules/sheet-components.scss
+++ b/src/styles/newrules/sheet-components.scss
@@ -208,7 +208,6 @@ i.fas.fa-shield-alt {
     }
 
     & > div {
-      @extend .dl-text-indent;
       line-height: 1.4;
     }
   }
@@ -296,7 +295,6 @@ i.fas.fa-shield-alt {
     }
 
     & > div {
-      @extend .dl-text-indent;
       line-height: 1.4;
     }
   }
